[package]
name = "fuse1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = {git = "https://github.com/zargony/fuse-rs", version="=0.4.0-dev"}
libc = "*"
log = "*"
thread-scoped = "*"
env_logger = "*"
